--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "echo \"No linting configured\""
+    "lint": "echo \"No linting configured\"",
+    "electron:serve": "concurrently -k cross-env Browser=none npm start npm electron:start"
   },
   "keywords": [],
   "author": {
@@ -18,6 +19,9 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.20.2",
+    "@babel/plugin-transform-react-jsx": "^7.19.0",
+    "@babel/preset-env": "^7.20.2",
     "@electron-forge/cli": "^6.0.3",
     "@electron-forge/maker-deb": "^6.0.3",
     "@electron-forge/maker-rpm": "^6.0.3",
@@ -25,13 +29,17 @@
     "@electron-forge/maker-zip": "^6.0.3",
     "@electron-forge/plugin-webpack": "^6.0.3",
     "@vercel/webpack-asset-relocator-loader": "^1.7.3",
+    "babel-loader": "^9.1.0",
     "css-loader": "^6.7.2",
     "electron": "21.3.0",
     "node-loader": "^2.0.0",
-    "style-loader": "^3.3.1"
+    "style-loader": "^3.3.1",
+    "webpack": "^5.75.0"
   },
   "dependencies": {
     "ag-grid-community": "^28.2.1",
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-squirrel-startup": "^1.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
