--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
   },
   "dependencies": {
     "ag-grid-community": "^28.2.1",
+    "electron-json-storage": "^4.6.0",
     "electron-squirrel-startup": "^1.0.0",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
